--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
 <head>
     <meta charset="utf-8">
     <title>绿科网站</title>
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/product.css">
+    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="product.css">
     <link rel="stylesheet" href="shichang">
-    <link rel="stylesheet" href="css/jianjie.css">
-    <link rel="stylesheet" href="css/team.css">
-    <link rel="stylesheet" href="css/culture.css">
-    <link rel="stylesheet" href="css/jieshao.css">
-    <link rel="stylesheet" href="css/part4.css">
-    <link rel="stylesheet" href="css/index.css">
-    <script src="js/backtop.js"></script>
-    <script src="js/change.js"></script>
+    <link rel="stylesheet" href="jianjie.css">
+    <link rel="stylesheet" href="team.css">
+    <link rel="stylesheet" href="culture.css">
+    <link rel="stylesheet" href="jieshao.css">
+    <link rel="stylesheet" href="part4.css">
+    <link rel="stylesheet" href="index.css">
+    <script src="backtop.js"></script>
+    <script src="change.js"></script>
 </head>
 
 <body>
@@ -23,7 +23,7 @@
         <div id="content">
             <div id="header">
                 <div class="Qa">
-                    <img src="image/logo.png" class="logo">
+                    <img src="logo.png" class="logo">
                     <div id="menu">
                         <ul>
                             <li>
@@ -92,7 +92,7 @@
                     </div>
                 </div>
                 <div class="left">
-                    <img src="./image/试剂.jpg" class="img">
+                    <img src="试剂.jpg" class="img">
                     <div class="greenBox"></div>
                 </div>
                 <div class="right">
@@ -166,7 +166,7 @@
                     <meta charset="UTF-8">
                     <meta name="viewport" content="width=device-width, initial-scale=1.0">
                     <title>Document</title>
-                    <link rel="stylesheet" href="./css/market.css">
+                    <link rel="stylesheet" href="market.css">
                 </head>
 
                 <body>
@@ -214,8 +214,8 @@
                 </div>
                 <div class="a4">
                     <div class="a5"></div>
-                    <div class="a6"><img src="image/图片4.png" class="a7"> </div>
-                    <div class="a8"><img src="image/图片5.png" class="a9"></div>
+                    <div class="a6"><img src="图片4.png" class="a7"> </div>
+                    <div class="a8"><img src="图片5.png" class="a9"></div>
                 </div>
                 <div class="a10">
                     <div class="a11">
@@ -246,7 +246,7 @@
                         </div>
                     </div>
                     <div class="b8">
-                        <img src="image/图片6.png" class="b9">
+                        <img src="图片6.png" class="b9">
                         <div class="b11"></div>
                     </div>
                 </div>
@@ -272,7 +272,7 @@
                         </div>
                     </div>
                     <div class="b8">
-                        <img src="image/图片7.png" class="b9">
+                        <img src="图片7.png" class="b9">
                         <div class="b111"></div>
                     </div>
                 </div>
@@ -318,7 +318,7 @@
                         </div>
                     </div>
                     <div class="mdr">
-                        <img src="image/牌坊.png" width="600px" height="300px">
+                        <img src="牌坊.png" width="600px" height="300px">
                     </div>
                 </div>
             </div>
@@ -331,7 +331,7 @@
                 <div class="middle1">
                     <div class="card">
                         <div class="imgBx">
-                            <img src="image/刘如亮.png" alt>
+                            <img src="刘如亮.png" alt>
                         </div>
                         <div class="content" alt>
                             <div>
@@ -342,7 +342,7 @@
                     </div>
                     <div class="card">
                         <div class="imgBx">
-                            <img src="image/李秋茹.png" alt>
+                            <img src="李秋茹.png" alt>
                         </div>
                         <div class="content">
                             <div>
@@ -353,7 +353,7 @@
                     </div>
                     <div class="card">
                         <div class="imgBx">
-                            <img src="image/王龙昕.png" alt>
+                            <img src="王龙昕.png" alt>
                         </div>
                         <div class="content">
                             <div>
@@ -364,7 +364,7 @@
                     </div>
                     <div class="card">
                         <div class="imgBx">
-                            <img src="image/郑锐凯.png" alt>
+                            <img src="郑锐凯.png" alt>
                         </div>
                         <div class="content">
                             <div>
@@ -375,7 +375,7 @@
                     </div>
                     <div class="card">
                         <div class="imgBx">
-                            <img src="image/周凯诗.png" alt>
+                            <img src="周凯诗.png" alt>
                         </div>
                         <div class="content">
                             <div>
@@ -386,7 +386,7 @@
                     </div>
                     <div class="card">
                         <div class="imgBx">
-                            <img src="image/张曼铃.png" alt>
+                            <img src="张曼铃.png" alt>
                         </div>
                         <div class="content">
                             <div>
@@ -397,7 +397,7 @@
                     </div>
                     <div class="card">
                         <div class="imgBx">
-                            <img src="image/蔡镕奇.png" alt>
+                            <img src="蔡镕奇.png" alt>
                         </div>
                         <div class="content">
                             <div>
@@ -408,7 +408,7 @@
                     </div>
                     <div class="card">
                         <div class="imgBx">
-                            <img src="image/周楚玲.png" alt>
+                            <img src="周楚玲.png" alt>
                         </div>
                         <div class="content">
                             <div>
@@ -419,7 +419,7 @@
                     </div>
                     <div class="card">
                         <div class="imgBx">
-                            <img src="image/蔡依蓝.png" alt>
+                            <img src="蔡依蓝.png" alt>
                         </div>
                         <div class="content">
                             <div>
@@ -430,7 +430,7 @@
                     </div>
                     <div class="card">
                         <div class="imgBx">
-                            <img src="image/李廷河.png" alt>
+                            <img src="李廷河.png" alt>
                         </div>
                         <div class="content">
                             <div>
@@ -441,7 +441,7 @@
                     </div>
                     <div class="card">
                         <div class="imgBx">
-                            <img src="image/汪海玲.jpeg" alt>
+                            <img src="汪海玲.jpeg" alt>
                         </div>
                         <div class="content">
                             <div>
@@ -452,7 +452,7 @@
                     </div>
                     <div class="card">
                         <div class="imgBx">
-                            <img src="image/吴巧婷.jpeg" alt>
+                            <img src="吴巧婷.jpeg" alt>
                         </div>
                         <div class="content">
                             <div>
@@ -475,7 +475,7 @@
                             <p align="right">实用创新，绿色环保</p>
                         </div>
                         <div class="mt1rl">
-                            <img src="image/电池人.png" width="300px" height="180px">
+                            <img src="电池人.png" width="300px" height="180px">
                         </div>
                     </div>
                     <div id="mt2l">
@@ -484,20 +484,20 @@
                             <p align="right">成为在生产水性粘结剂、<br>锂电池等领域的领头公司</p>
                         </div>
                         <div class="mt2rl">
-                            <img src="image/电池.png" width="150px" height="80px">
+                            <img src="电池.png" width="150px" height="80px">
                         </div>
                     </div>
                     <div id="mt3l">
-                        <img src="image/文化块2.png" width="60px" height="60px">
+                        <img src="文化块2.png" width="60px" height="60px">
                     </div>
                 </div>
                 <div class="mtrr">
                     <div id="mt4r">
-                        <img src="image/文化块1.png" width="70px" height="40px">
+                        <img src="文化块1.png" width="70px" height="40px">
                     </div>
                     <div id="mt5r">
                         <div class="mt5lr">
-                            <img src="image/文化管理.png" width="200px" height="100px">
+                            <img src="文化管理.png" width="200px" height="100px">
                         </div>
                         <div class="mt5rr">
                             <h2>管理理念</h2>
@@ -506,7 +506,7 @@
                     </div>
                     <div id="mt6r">
                         <div class="mt6lr">
-                            <img src="image/文化责任.png" width="280px" height="160px">
+                            <img src="文化责任.png" width="280px" height="160px">
                         </div>
                         <div class="mt6rr">
                             <h2>公司责任</h2>
@@ -545,7 +545,7 @@
                         <td align="center" valign="middle" bgcolor="#D5E3CF">&nbsp;高分子材料、应用化学、化学、化学工程等</td>
                         <td align="center" valign="middle" bgcolor="#D5E3CF">&nbsp;广州</td>
                         <td align="center" valign="middle" bgcolor="#D5E3CF"><a href="index.html"><img
-                                    src="image/74b708341941543e26dbdfc76366c07.png" width="100" height="37"
+                                    src="74b708341941543e26dbdfc76366c07.png" width="100" height="37"
                                     alt="" /></a>&nbsp;<a href="index.html">&nbsp;</a></td>
                     </tr>
                     <tr>
@@ -556,7 +556,7 @@
                             &nbsp;电子信息工程、通信工程、无机非金材料、材料科学与工程、材料化学、高分子材料、市场营销等</td>
                         <td align="center" valign="middle" bgcolor="#EBF1E9">&nbsp;广州</td>
                         <td align="center" valign="middle" bgcolor="#EBF1E9"><a href="index.html"><img
-                                    src="image/74b708341941543e26dbdfc76366c07.png" width="101" height="37"
+                                    src="74b708341941543e26dbdfc76366c07.png" width="101" height="37"
                                     alt="" />&nbsp;</a></td>
                     </tr>
                     <tr>
@@ -567,7 +567,7 @@
                             &nbsp;无机非金属材料、材料科学与工程、材&nbsp;料化学、高分子材料、建筑材料、土木工程，市场营销等</td>
                         <td align="center" valign="middle" bgcolor="#D5E3CF">&nbsp;广州</td>
                         <td align="center" valign="middle" bgcolor="#D5E3CF">
-                            <a href="index.html"><img src="image/74b708341941543e26dbdfc76366c07.png" width="100"
+                            <a href="index.html"><img src="74b708341941543e26dbdfc76366c07.png" width="100"
                                     height="37" alt="" /></a><a href="index.html">&nbsp;</a>
 
                         </td>
@@ -583,7 +583,7 @@
                         <td align="center" valign="middle" bgcolor="#EBF1E9">&nbsp;广州</td>
                         <td align="center" valign="middle" bgcolor="#EBF1E9"><a href="index.html"><img
                                     style="margin-left : 18px;margin-bottom:  -20px"
-                                    src="image/74b708341941543e26dbdfc76366c07.png" width="101" height="37"
+                                    src="74b708341941543e26dbdfc76366c07.png" width="101" height="37"
                                     alt="" />&nbsp;申</a></td>
                     </tr>
                 </tbody>
@@ -631,7 +631,7 @@
         <!-- 底部 -->
         <div class="footer">
             <div class="footerleft">
-                <img src="image/logo.png" width="100px" height="70px">
+                <img src="logo.png" width="100px" height="70px">
             </div>
             <div class="footerright">
                 <div class="box1">
@@ -676,7 +676,7 @@
                     </p>
                 </div>
                 <div class="fbr">
-                    <img src="image/二维码.png" width="80px" height="80px">
+                    <img src="二维码.png" width="80px" height="80px">
                 </div>
             </div>
         </div>
